--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="score">50</string>
+    <string name="startWord">BALL</string>
+    <string name="endWord">BILL</string>
+    <string name="currentRound">1</string>
+
+    <string name="title_activity_title">4 Letters</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
